# mark-down

./: .gitignore  BACKLOG.md  CLAUDE.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
QuickLookExtension/: Info.plist  MarkdownToHTML.swift  PreviewViewController.swift
scripts/: build-quicklook.sh  create-dmg.sh  patch-plist.sh
src/: editor.ts  files.ts  main.ts  preview.ts  styles.css  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/themes/: dark.css  default.css  sepia.css
