[package]
name = "mark-down"
version = "1.0.0"
description = "A cross-platform markdown editor with live preview and customizable stylesheets"
authors = ["Terrell"]
edition = "2021"

[lib]
name = "mark_down_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPrintInfo", "NSPrintOperation", "NSPrintPanel", "NSWindow", "NSResponder", "NSView"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView"] }
objc2-foundation = { version = "0.3", features = ["NSObject", "NSData", "NSError", "NSString", "NSGeometry", "NSZone", "NSURL"] }
